scaleway/manifests/admin-spa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-spa
  namespace: soberone
spec:
  clusterIP: 10.42.170.27
  clusterIPs:
  - 10.42.170.27
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: admin-spa
  sessionAffinity: None
  type: ClusterIP
