scaleway/manifests/admin-spa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: admin-spa
  namespace: soberone
spec:
  ingressClassName: traefik
  rules:
  - host: admin-spa.getsober.one
    http:
      paths:
      - backend:
          service:
            name: admin-spa
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - admin-spa.getsober.one
    secretName: admin-spa-tls
